--- a/image-to-bingrba.html
+++ b/image-to-bingrba.html
@@ -63,7 +63,7 @@ The 3DS screens are rotated -90 degrees. To fix that, the tool rotates your imag
 <b>2) Check your options:</b>
 <br>
 <br>
-<input type="checkbox" id="rotate" checked> rotate 90° - <input type="checkbox" id="alpha"> preserve transparency  - <input type="checkbox" id="grba"> output as GRBA
+<input type="checkbox" id="rotate" checked> rotate 90° - <input type="checkbox" id="alpha"> preserve transparency (AGRB)  - <input type="checkbox" id="grba"> preserve transparency (GRBA)
 
 <br>
 <br>
